# mre-for-playwrite-scrapy

./: README.md  pyproject.toml  scrapy.cfg
docs/: index.html  result.html
mre/: items.py  middlewares.py  pipelines.py  settings.py
mre/spiders/: example.py
