[tool.poetry]
name = "minimum reproducable example"
version = "0.1.0"
description = "An MRE for https://github.com/scrapy-plugins/scrapy-playwright/issues/190"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.9.0"
playwright = "^1.34.0"
scrapy-playwright = "^0.0.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
